updated and refactored to reflect new working system

--- a/building/basicBuildSetup.yml
+++ b/building/basicBuildSetup.yml
@@ -59,10 +59,10 @@
           - python-dev               # used for packagingTools
     - name: copy test scripts
       copy:
-        src: scripts/
+        src: awsEC2/scripts/
         dest: .
         mode: a+x
     - name: copy simple test PDF files
       copy:
-        src: files/
+        src: awsEC2/files/
         dest: .
