--- a/building/ec2-install-pdf2html-testDeb.yml
+++ b/building/ec2-install-pdf2html-testDeb.yml
@@ -16,3 +16,14 @@
 
 - import_playbook: basicTestSetup.yml
 
+- name: Setup and install poppler repos for compilation
+  hosts: compileServers
+  remote_user: ubuntu
+  gather_facts: no
+  tasks:
+    - name: Install poppler git repo for compilation
+      git:
+        repo: https://gitlab.freedesktop.org/poppler/poppler.git
+        dest: /home/ubuntu/poppler
+        version: poppler-0.75.0
+
