updated package building tools

--- a/building/basicBuildSetup.yml
+++ b/building/basicBuildSetup.yml
@@ -41,6 +41,7 @@
           #- clang++ in clang package
           - clang-tidy
           #- clang-tools
+          - equivs # to build a fake poppler package
           - libcairo-dev
           - libspiro-dev
           - libpng-dev
