--- a/building/vm-install-pdf2html-develop-stg.yml
+++ b/building/vm-install-pdf2html-develop-stg.yml
@@ -1,8 +1,8 @@
 ---
 
-# This "raw" playbook provisions an EC2 Instance for use as a temporary 
-# trial compile machine. This is useful for test compiling updates to 
-# pdf2htmlEX while it is in development.
+# This "raw" playbook provisions an Virtual Machine Instance for use as a 
+# temporary trial compile machine. This is useful for test compiling 
+# updates to pdf2htmlEX while it is in development.
 #
 # This playbook uses the *stephengaito/pdf2htmlEX* sources from the HEAD of 
 # the *master* branch.
@@ -14,38 +14,38 @@
 - import_playbook: basicBuildSetup.yml
 
 - name: Setup and install poppler and pdf2htmlEX repos for compilation
-  hosts: compileServers
-  remote_user: ubuntu
+  hosts: all
+  remote_user: "{{ lookup('env', 'VIRTUAL_MACHINE_USER') }}"
   gather_facts: no
   tasks:
     - name: Install poppler git repo for compilation
       git:
         repo: https://gitlab.freedesktop.org/poppler/poppler.git
-        dest: /home/ubuntu/poppler
+        dest: poppler
         version: poppler-0.62.0
     - name: Install fontforge git repo for compilation
       git:
         repo: https://github.com/fontforge/fontforge.git
-        dest: /home/ubuntu/fontforge
+        dest: fontforge
         version: 20170731
     - name: Install pdf2htmlEX git repo for compilation
       git:
         repo: https://github.com/stephengaito/pdf2htmlEX.git
-        dest: /home/ubuntu/pdf2html
+        dest: pdf2html
         version: fontforge-20170731-poppler-0.62.0-ubuntu-18.04
     - name: Install pdf2htmlEX packaging tools
       git:
         repo: https://github.com/pdf2htmlEX/buildAndPackagingTools
-        dest: /home/ubuntu/pdf2html-buildAndPackagingTools
+        dest: pdf2html-buildAndPackagingTools
     - name: copy build_dists.py
       copy:
-        src: /home/ubuntu/pdf2html-buildAndPackagingTools/packaging/build_dists.py
+        src: pdf2html-buildAndPackagingTools/packaging/build_dists.py
         remote_src: yes
-        dest: /home/ubuntu/pdf2html/build_dists.py
+        dest: pdf2html/build_dists.py
         mode: preserve
     - name: copy debian directory
       copy:
-        src: /home/ubuntu/pdf2html-buildAndPackagingTools/packaging/debian
+        src: pdf2html-buildAndPackagingTools/packaging/debian
         remote_src: yes
-        dest: /home/ubuntu/pdf2html
+        dest: pdf2html
 
