--- a/building/vm-install-pdf2html-master.yml
+++ b/building/vm-install-pdf2html-master.yml
@@ -11,33 +11,33 @@
 - import_playbook: basicBuildSetup.yml
 
 - name: Setup and install poppler and pdf2htmlEX repos for compilation
-  hosts: compileServers
-  remote_user: ubuntu
+  hosts: all
+  remote_user: "{{ lookup('env', 'VIRTUAL_MACHINE_USER') }}"
   gather_facts: no
   tasks:
     - name: Install poppler git repo for compilation
       git:
         repo: https://gitlab.freedesktop.org/poppler/poppler.git
-        dest: /home/ubuntu/poppler
+        dest: poppler
         version: poppler-0.81.0
     - name: Install pdf2htmlEX git repo for compilation
       git:
         repo: https://github.com/pdf2htmlEX/pdf2htmlEX.git
-        dest: /home/ubuntu/pdf2html
+        dest: pdf2html
     - name: Install pdf2htmlEX packaging tools
       git:
         repo: https://github.com/pdf2htmlEX/buildAndPackagingTools
-        dest: /home/ubuntu/pdf2html-buildAndPackagingTools
+        dest: pdf2html-buildAndPackagingTools
     - name: copy build_dists.py
       copy:
-        src: /home/ubuntu/pdf2html-buildAndPackagingTools/packaging/build_dists.py
+        src: pdf2html-buildAndPackagingTools/packaging/build_dists.py
         remote_src: yes
-        dest: /home/ubuntu/pdf2html/build_dists.py
+        dest: pdf2html/build_dists.py
         mode: preserve
     - name: copy debian directory
       copy:
-        src: /home/ubuntu/pdf2html-buildAndPackagingTools/packaging/debian
+        src: pdf2html-buildAndPackagingTools/packaging/debian
         remote_src: yes
-        dest: /home/ubuntu/pdf2html
+        dest: pdf2html
 
 
