--- a/building/vm-install-pdf2html-testDeb.yml
+++ b/building/vm-install-pdf2html-testDeb.yml
@@ -25,5 +25,5 @@
       git:
         repo: https://gitlab.freedesktop.org/poppler/poppler.git
         dest: poppler
-        version: poppler-0.81.0
+        version: "{{ popplerVersion }}"
 
