--- a/building/vm-install-pdf2html-master.yml
+++ b/building/vm-install-pdf2html-master.yml
@@ -1,8 +1,8 @@
 ---
 
-# This "raw" playbook provisions an EC2 Instance for use as a temporary 
-# trial compile machine which can also build the *.deb archive for the 
-# distribution of a given pdf2htmlEX release.
+# This "raw" playbook provisions a Virtual Machine Instance for use as a 
+# temporary trial compile machine which can also build the *.deb archive 
+# for the distribution of a given pdf2htmlEX release.
 #
 # We use the pdf2htmlEX/pdf2htmlEX sources from the HEAD of the *master* 
 # branch
@@ -19,7 +19,7 @@
       git:
         repo: https://gitlab.freedesktop.org/poppler/poppler.git
         dest: poppler
-        version: poppler-0.81.0
+        version: "{{ popplerVersion }}"
     - name: Install pdf2htmlEX git repo for compilation
       git:
         repo: https://github.com/pdf2htmlEX/pdf2htmlEX.git
@@ -28,6 +28,7 @@
       git:
         repo: https://github.com/pdf2htmlEX/buildAndPackagingTools
         dest: pdf2html-buildAndPackagingTools
+        version: "{{ pdf2htmlEXBuildToolsVersion }}"
     - name: copy build_dists.py
       copy:
         src: pdf2html-buildAndPackagingTools/packaging/build_dists.py
